--- a/elementos/styles/style.css
+++ b/elementos/styles/style.css
@@ -1,10 +1,10 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.container{
+.container {
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     padding: 16px;
 }
 
-.item{
+.item {
     background-color: black;
     color: white;
     height: 75px;
@@ -33,6 +33,7 @@
     align-items: center;
 
 }
+
 .item input {
     width: 100%;
     padding: 8px;
@@ -40,14 +41,21 @@
     outline: none;
 }
 
-.item button{
+.item button {
     width: 200px;
     height: 50px;
     font-size: inherit;
 }
-.item .numeros{
+
+.item .numeros {
     background-color: white;
     color: black;
     width: 100%;
     height: 50px;
+    display: flex;
+    align-items: center;
+    overflow-x: scroll;
+    white-space: nowrap;
+    font-size: inherit;
+    padding-inline: 16px;
 }
