--- a/estrutura-de-dados/style/styles.css
+++ b/estrutura-de-dados/style/styles.css
@@ -44,3 +44,32 @@ main{
     align-items: center;
     font-size: 2rem;
 }
+
+.card{
+    height: 200px;
+    width: 200px;
+    box-shadow: 2px 2px 6px #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    font-size: 2rem;
+}
+
+.card__photo{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 2px solid lightskyblue;
+}
+
+.card__name{
+    font-size: 1.5rem;
+    color: lightskyblue;
+}
+
+.card__user-id{
+    font-size: 1.5rem;
+    color: #555;
+}
